--- a/src/Components/Screens/BusinessDev/busdev.module.css
+++ b/src/Components/Screens/BusinessDev/busdev.module.css
@@ -10,6 +10,34 @@
     width: "312px";
     height: "250px";
 }
+.img2{
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    text-align: justify;
+    background-image: url("../../../../public/Images/businessimages/dot1.png");
+    background-position: center;
+    /* position: relative; */
+    /* background-size: "contain"; */
+    width: "312px";
+    height: "250px";
+}
+
+
+@media (min-width: 768px){
+    .img2{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        text-align: justify;
+        background-image: url("../../../../public/Images/businessimages/dot1.png");
+        background-position: center;
+        /* position: relative; */
+        /* background-size: "contain"; */
+        width: "312px";
+        height: "250px";
+    }
+}
 
 /* flex flex-col gap-[20px] text-justify */
 @media (min-width: 1024px){
