--- a/src/Components/Screens/FAQs/Faq.module.css
+++ b/src/Components/Screens/FAQs/Faq.module.css
@@ -11,14 +11,14 @@
 
 .faq2{
 background: #FFFFFF;
-box-shadow: 0px 0px 6.26506px rgba(139, 67, 255, 0.5);
+box-shadow: 0px 0px 11.26506px rgba(139, 67, 255, 0.5);
 border-radius: 3.75904px;
 /* height: 27px; */
 padding: 3px;
-text-align: center;
+/* text-align: center; */
 display: flex;
-justify-content: center;
-align-items: center;
+/* justify-content: center;
+align-items: center; */
 z-index: 100%;
 }
 
@@ -55,7 +55,7 @@ z-index: 100%;
     box-shadow: 0px 0px 20px rgba(139, 67, 255, 0.5);
     border-radius: 12px;
     /* height: 27px; */
-    padding: 10px;
+    padding: 20px;
     width: 996px;
     margin: 0 auto;
     display: flex;
