--- a/src/Components/Screens/contactUs/contactUs.css
+++ b/src/Components/Screens/contactUs/contactUs.css
@@ -1,3 +1,10 @@
 .inputBoxShadow{
     box-shadow: 0px 0px 2.31667px rgba(0, 0, 0, 0.25)
 }
+.inputBoxShadow2{
+    box-shadow: 0px 0px 2.31667px rgba(0, 0, 0, 0.166)
+}
+.chima{
+    background-color: "green";
+    color:"red";
+}
