--- a/src/Components/loginForm/LoginForm.css
+++ b/src/Components/loginForm/LoginForm.css
@@ -4,5 +4,16 @@
   /* stroke fade */
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-  
+}
+
+.transPin {
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.inputOTP {
+  border-radius: 2.865px;
+  border: 0.573px solid var(--stroke-fade, rgba(0, 0, 0, 0.3));
+  background: #fff;
 }
