--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -21,6 +21,8 @@ backdrop-filter: blur(5.589743614196777px);
 @media (min-width: 1024px){
     .dashboard{
         width: 275px;
-        gap:10px
+        gap:10px;
+        cursor: pointer;
+        
     }
 }
