--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -2,7 +2,7 @@
 display: flex;
 margin: 10% auto;
 display: flex;
-width: 96.074px;
+width: 125px;
 padding: 4% 0 4% 4%;
 gap: 4%;
 border-radius: 3.494px;
@@ -23,6 +23,6 @@ backdrop-filter: blur(5.589743614196777px);
         width: 275px;
         gap:10px;
         cursor: pointer;
-        
+        border-radius: 10px;
     }
 }
