--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -126,6 +126,21 @@ select {
 height: 100vh;
 }
 
+.blur{
+  position: absolute;
+  backdrop-filter: blur(4px);
+  color: var(--primary-color-main, #04177F);
+  top: 35%;
+  right: 15%;
+  width: 70%;
+  height: 70px;
+  font-size: 11.093px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-align: center;
+}
+
 /* ================ TABLET VIEW ============== */
 @media (min-width: 768px) {
   .dashboard {
@@ -236,14 +251,12 @@ height: 100vh;
 /* =================Surface Pro 7================ */
 @media (min-width: 912px) and (max-width: 1368px) {
   .sidebar {
-    width: 240px;
+    width: 250px;
     height: 100vh;
-border-top-right-radius: 45px;
-border-bottom-right-radius: 45px;
   }
 
   .navSide {
-    gap: 95px;
+    gap: 110px;
   }
 
   .topbar {
@@ -255,7 +268,12 @@ border-bottom-right-radius: 45px;
   }
 
   .walletText {
-    font-size: 25px;
+    font-size: 25.5px;
+  }
+
+  .dashboard {
+    width: 209px;
+    gap: 9px;
   }
 
   .viewBalance {
@@ -264,6 +282,25 @@ border-bottom-right-radius: 45px;
     gap: 59px;
     justify-content: center;
     align-items: center;
+  }
+
+  .balance1 {
+    width: 100%;
+    height: 270px;
+    border-radius: 8.32px;
+    padding: 3%;
+  }
+
+  .balance2 {
+    height: 280px;
+  }
+
+  .GVA{
+font-size: 25px;
+  }
+
+  .virtualaccounttxt{
+    font-size: 19px;
   }
 
   select {
@@ -279,7 +316,7 @@ border-bottom-right-radius: 45px;
   }
 
   .fcp {
-    margin-top: 6%;
+    margin-top: 5%;
     gap: 100px;
   }
 
@@ -307,7 +344,17 @@ border-bottom-right-radius: 45px;
   }
 
   .logout{
-    margin-top: 250%;
+    margin-top: 190%;
+    font-size: 24px;
+    align-items: center;
+  }
+
+  .logouttxt{
+    font-size: 18px;
+      }
+
+  .sidebartxt{
+    font-size: 13px;
   }
 }
 
