--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -56,23 +56,6 @@
   margin-top: 7%;
 }
 
-/* .NGN {
-  display: flex;
-  width: 50px;
-  width: 60px;
-  height: 23px;
-  padding: 3.92px;
-  gap: 7.84px;
-  color: #000;
-  border-radius: 10.193px;
-background: var(--boxes, rgba(146, 171, 254, 0.18));
-  background: rgba(146, 171, 254, 0);
-  font-size: 6.933px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-} */
-
 select {
   padding: 3px;
   border-radius: 10.193px;
@@ -83,7 +66,6 @@ select {
   font-weight: 600;
   line-height: normal;
   width: 50px;
-  /* background-color: transparent; */
   outline: none;
   font-weight: bolder;
 }
@@ -127,11 +109,12 @@ height: 100vh;
 }
 
 .blur{
+  /* background-color: red; */
   position: absolute;
   backdrop-filter: blur(4px);
   color: var(--primary-color-main, #04177F);
-  top: 35%;
-  right: 15%;
+  /* top: 35%; */
+  /* right: 15%; */
   width: 70%;
   height: 70px;
   font-size: 11.093px;
@@ -139,10 +122,17 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 text-align: center;
+margin-left: 6%;
+padding-top: 3%;
 }
 
 /* ================ TABLET VIEW ============== */
 @media (min-width: 768px) {
+  .blur{
+font-size: larger;
+padding-top: 2%;
+  }
+
   .dashboard {
     width: 157px;
     gap: 6px;
@@ -250,6 +240,11 @@ text-align: center;
 
 /* =================Surface Pro 7================ */
 @media (min-width: 912px) and (max-width: 1368px) {
+  .blur{
+    font-size: 20px;
+    padding-top: 2%;
+      }
+
   .sidebar {
     width: 250px;
     height: 100vh;
@@ -421,6 +416,15 @@ padding: 8px 0;
 
 /* =================== DESKTOP VIEW================ */
 @media (min-width: 1024px) {
+  .blur{
+    /* background-color: red; */
+    width: 37%;
+    height: 90px;
+    font-size: 24px;
+    font-weight: bolder;
+    margin-left: 1%;
+      }
+
   .dashboard {
     width: 275px;
     gap: 10px;
