--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -229,7 +229,7 @@ select {
   }
 
   .walletText {
-    font-size: 25.5px;
+    /* font-size: 25.5px; */
   }
 
   .dashboard {
@@ -277,7 +277,7 @@ select {
   }
 
   .fcp {
-    margin-top: 5%;
+    /* margin-top: 5%; */
     gap: 100px;
   }
 
@@ -344,7 +344,7 @@ select {
   }
 
   .walletText {
-    font-size: 16px;
+    /* font-size: 16px; */
   }
 
   .viewBalance {
@@ -380,7 +380,7 @@ select {
 /* =================== DESKTOP VIEW================ */
 @media (min-width: 1024px) {
   .dashboard {
-    width: 265px;
+    width: 230px;
     gap: 10px;
     cursor: pointer;
     border-radius: 10px;
@@ -439,12 +439,12 @@ select {
   }
 
   .walletText {
-    /* font-size: 23.093px; */
+    font-size: 23.093px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     text-align: center;
-    margin-top: 8%;
+    margin-top: 10%;
   }
 
   .NGN {
@@ -485,4 +485,17 @@ select {
     outline: none;
     font-weight: bolder;
   }
+
+  .navSide {
+    gap: 70px;
+  }
+
+  .fcp{
+    /* margin-top: 10%; */
+  }
+
+  .GVA {
+    font-size: 20px;
+  }
 }
+
