--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -3,13 +3,13 @@
   margin-top: 10%;
 }
 
-.QuickFeaturetext{
-font-weight:bolder;
+.QuickFeaturetext {
+  font-weight: bolder;
 }
 
-.InOutText{
-font-size: 11px;
-font-weight:bolder;
+.InOutText {
+  font-size: 11px;
+  font-weight: bolder;
 }
 
 .feature {
@@ -29,9 +29,46 @@ font-weight:bolder;
   line-height: normal;
 }
 
+.Chart {
+  padding: 2%;
+  /* background: #FFF; */
+  box-shadow: 0px 0px 6.6666669845581055px 0px rgba(0, 0, 0, 0.25);
+}
+
+.chartbuttons {
+  display: flex;
+  gap: 10px;
+  float: right;
+}
+
+.chartBtn {
+  width: auto;
+  padding: 2px 3.333px;
+  gap: 3.333px;
+  border-radius: 1.667px;
+  /* background: var(--stroke-fade, rgba(0, 0, 0, 0.30)); */
+  color: #FFF;
+  font-size: 5.667px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.INnOUT {
+  justify-content: space-between;
+/* gap: 5px; */
+}
+
+.inflowOutflow {
+  padding: 4.924px 6.132px;
+  border-radius: 1.97px;
+}
+
+
+
 /* ===================Tablet view ================ */
 @media (min-width: 820px) and (max-width:1180px) {
-  .feature{
+  .feature {
     width: 130px;
     gap: 3.333px;
     padding: 15px 0px;
@@ -43,9 +80,9 @@ font-weight:bolder;
     height: 40px;
   }
 
-  .InOutText{
+  .InOutText {
     font-size: 14px;
-    }
+  }
 }
 
 /* ==================Surface Pro 7================ */
@@ -66,13 +103,14 @@ font-weight:bolder;
     width: 40px;
     height: 40px;
   }
+
   .quickgrid {
     gap: 20px;
   }
 
-  .InOutText{
+  .InOutText {
     font-size: 18px;
-    }
+  }
 
 }
 
@@ -115,7 +153,7 @@ font-weight:bolder;
     gap: 24px;
   }
 
-  .InOutText{
+  .InOutText {
     font-size: 21px;
-    }
+  }
 }
