--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -15,6 +15,23 @@
   backdrop-filter: blur(5.589743614196777px);
 }
 
+
+/* {blurTwo && (
+  <div
+    className={` ${
+      toggleSideBar
+        ? ""
+        : "backdrop-blur-[4.5px] text-[#04177f] text-[12px] h-[14%] w-[85%] font-extrabold flex justify-center pt-[7%]"
+    } `}
+  >
+    Coming Soon...
+  </div>
+)} */
+
+/* onClick={() => {
+  setBlurTwo(true);
+}} */
+
 .balance {
   margin-top: 5%;
   display: flex;
@@ -380,7 +397,7 @@ select {
 /* =================== DESKTOP VIEW================ */
 @media (min-width: 1024px) {
   .dashboard {
-    width: 230px;
+    width: 220px;
     gap: 10px;
     cursor: pointer;
     border-radius: 10px;
@@ -487,7 +504,7 @@ select {
   }
 
   .navSide {
-    gap: 70px;
+    gap: 50px;
   }
 
   .fcp{
