--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -20,9 +20,7 @@
   align-items: center;
   gap: 3.333px;
   border-radius: 4px;
-  background: #fff;
   box-shadow: 0px 0px 3.3333332538604736px 0px rgba(0, 0, 0, 0.25);
-  color: #000;
   font-size: 5.333px;
   font-style: normal;
   font-weight: 500;
@@ -31,7 +29,6 @@
 
 .Chart {
   padding: 2%;
-  /* background: #FFF; */
   box-shadow: 0px 0px 6.6666669845581055px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -45,9 +42,7 @@
   padding: 2px 3.333px;
   gap: 3.333px;
   border-radius: 1.667px;
-  /* background: var(--stroke-fade, rgba(0, 0, 0, 0.30)); */
   color: #FFF;
-  /* font-size: 5.667px; */
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -95,7 +90,6 @@
 
   .chartBtn{
     padding: 6px 7.333px;
-    /* font-size: 13.667px; */
   }
 }
 
@@ -154,9 +148,9 @@
     align-items: center;
     gap: 13.248px;
     border-radius: 15.897px;
-    background: #fff;
+    /* background: #fff; */
     box-shadow: 0px 0px 13.247862815856934px 0px rgba(0, 0, 0, 0.25);
-    color: #000;
+    /* color: #000; */
     font-size: 18.197px;
     font-style: normal;
     font-weight: 500;
@@ -187,9 +181,9 @@
     padding: 19.873px 52.994px;
   }
 
-  .chartbuttons{
+  /* .chartbuttons{ */
     /* gap:50px; */
-  }
+  /* } */
 
   .chartBtn{
     /* font-size: 21px; */
