--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -42,7 +42,7 @@
   padding: 2px 3.333px;
   gap: 3.333px;
   border-radius: 1.667px;
-  color: #FFF;
+  color: #fff;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -50,7 +50,7 @@
 
 .INnOUT {
   justify-content: space-between;
-/* gap: 5px; */
+  /* gap: 5px; */
 }
 
 .inflowOutflow {
@@ -58,13 +58,65 @@
   border-radius: 1.97px;
 }
 
-.totalTransactions{
+.totalTransactions {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
 }
 
+.filter {
+  box-shadow: 0px 1.3290735483169556px 1.3290735483169556px 0px
+    rgba(0, 0, 0, 0.25);
+}
+
+.viewTransactions {
+  display: flex;
+  width: 100%;
+  padding: 20px 0px 15px 0px;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  box-shadow: 0px 0px 6.666667461395264px 0px rgba(0, 0, 0, 0.25);
+}
+
+.noTransactions {
+  width: 172.333px;
+  height: 152px;
+}
+
+.viewAll {
+  display: flex;
+  padding: 0.999px 1.998px;
+  align-items: center;
+  gap: 1.665px;
+  border: 0.1px solid var(--stroke-fade, rgba(0, 0, 0, 0.3));
+  background: #fff;
+  box-shadow: 0px 0px 1.3319103717803955px 0px rgba(0, 0, 0, 0.25);
+}
+
+.viewText{
+  color: #707070;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%; /* 13px */
+}
+
+.contactus{
+  display: flex;
+  padding: 2.865px 8.594px;
+  justify-content: center;
+  align-items: center;
+  gap: 5.729px;
+  border-radius: 5.156px;
+  background: var(--primary-color-main, #04177F);
+  color: #FFF;
+font-size: 8px;
+font-style: normal;
+font-weight: 500;
+line-height: 130%; /* 10.4px */
+}
 
 /* ===================Tablet view ================ */
-@media (min-width: 820px) and (max-width:1180px) {
+@media (min-width: 820px) and (max-width: 1180px) {
   .feature {
     width: 130px;
     gap: 3.333px;
@@ -82,23 +134,68 @@
   }
 
   .INnOUT {
-  align-items: center;
+    align-items: center;
   }
-  
+
   .inflowOutflow {
     font-size: 12.145px;
     padding: 11.386px 20.361px;
     border-radius: 5px;
   }
 
-  .chartBtn{
+  .chartBtn {
     padding: 6px 7.333px;
   }
 
-  .totalTransactions{
+  .totalTransactions {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.35);
     /* top: 122.5%; */
     /* font-size: 16px; */
+  }
+
+  .viewTransactions {
+    display: flex;
+    width: 100%;
+    padding: 20px 0px 15px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+
+  }
+  
+  .noTransactions {
+    width: 300px;
+    height: 300px;
+  }
+  
+  .viewAll {
+    display: flex;
+    padding: 5.999px 5.998px;
+    align-items: center;
+    gap: 1.665px;
+    border: 0.1px solid var(--stroke-fade, rgba(0, 0, 0, 0.3));
+    background: #fff;
+    box-shadow: 0px 0px 1.3319103717803955px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .viewText{
+    color: #707070;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%; /* 13px */
+  }
+  
+  .contactus{
+    display: flex;
+    padding: 2.865px 8.594px;
+    justify-content: center;
+    align-items: center;
+    gap: 5.729px;
+    border-radius: 5.156px;
+  font-size: 18px;
+
   }
 }
 
@@ -135,13 +232,13 @@
     border-radius: 7px;
   }
 
-  .totalTransactions{
+  .totalTransactions {
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.35);
     /* top: 116.5%; */
     /* font-size: 16px; */
   }
 
-  .totalTransactions li{
+  .totalTransactions li {
     padding-top: 9px;
     padding-bottom: 9px;
   }
@@ -195,16 +292,33 @@
     font-weight: bolder;
   }
 
-  .inflowOutflow{
+  .inflowOutflow {
     font-size: 21px;
     font-weight: 800;
     padding: 19.873px 52.994px;
   }
 
-  .chartBtn{
+  .chartBtn {
     /* font-size: 21px; */
     padding: 2px 13.259px;
     border-radius: 6.629px;
   }
 
+  .filter {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .viewText{
+    font-size: 14px;
+  }
+
+  .noTransactions {
+    width: 517px;
+    height: 456px;
+  }
+
+  .contactus{
+    font-size: 15px;
+  }
 }
+
