--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -111,7 +111,7 @@
   align-items: center;
   gap: 5.729px;
   border-radius: 5.156px;
-  background: var(--primary-color-main, #04177f);
+  /* background: var(--primary-color-main, #04177f); */
   color: #fff;
   font-size: 8px;
   font-style: normal;
@@ -126,6 +126,21 @@
   background: #fff;
   box-shadow: 0px 0px 15.634516716003418px 0px rgba(139, 67, 255, 0.5);
 margin-top: -8%;
+}
+
+.toMyAcct{
+  display: flex;
+padding: 6.968px 12.508px 10.376px 6.968px;
+align-items: flex-end;
+justify-content: space-between;
+border-radius: 3.974px;
+box-shadow: 0px 0px 3.3119657039642334px 0px rgba(0, 0, 0, 0.25);
+}
+
+.cryptoTopUp{
+  height: 243px;
+  border-radius: 8px;
+box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
 }
 
 /* ===================Tablet view ================ */
