--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -125,22 +125,22 @@
   height: 209px;
   background: #fff;
   box-shadow: 0px 0px 15.634516716003418px 0px rgba(139, 67, 255, 0.5);
-margin-top: -8%;
+  margin-top: -8%;
 }
 
-.toMyAcct{
+.toMyAcct {
   display: flex;
-padding: 6.968px 12.508px 10.376px 6.968px;
-align-items: flex-end;
-justify-content: space-between;
-border-radius: 3.974px;
-box-shadow: 0px 0px 3.3119657039642334px 0px rgba(0, 0, 0, 0.25);
+  padding: 6.968px 12.508px 10.376px 6.968px;
+  align-items: flex-end;
+  justify-content: space-between;
+  border-radius: 3.974px;
+  box-shadow: 0px 0px 3.3119657039642334px 0px rgba(0, 0, 0, 0.25);
 }
 
-.cryptoTopUp{
+.cryptoTopUp {
   height: 243px;
   border-radius: 8px;
-box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
 }
 
 /* ===================Tablet view ================ */
@@ -225,7 +225,7 @@ box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
     font-size: 18px;
   }
 
-  .calender{
+  .calender {
     margin-top: -3.5%;
     width: 270px;
     height: 260px;
@@ -276,10 +276,19 @@ box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
     padding-bottom: 9px;
   }
 
-  .calender{
+  .calender {
     margin-top: -3.5%;
     width: 270px;
     height: 260px;
+  }
+
+  .toMyAcct {
+    display: flex;
+    padding: 8.594px 28.645px 8.375px 8.595px;
+    align-items: center;
+    gap: 203.073px;
+    border-radius: 6.875px;
+    box-shadow: 0px 0px 5.7291669845581055px 0px rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -365,7 +374,15 @@ box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
     width: 300px;
     height: 340px;
     box-shadow: 0px 0px 15.634516716003418px 0px rgba(139, 67, 255, 0.5);
-  margin-top: -3.5%;
+    margin-top: -3.5%;
   }
 
+  .toMyAcct {
+    display: flex;
+    padding: 15px 50px 15px 15px;
+    align-items: center;
+    gap: 354px;
+    border-radius: 12px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.65);
+  }
 }
