--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -144,6 +144,16 @@
   box-shadow: 0px 0px 9.217082977294922px 0px rgba(0, 0, 0, 0.25);
 }
 
+.countrySelect {
+  border-radius: 5px;
+  color: #7c7c7c;
+  position: absolute;
+  left: 69%;
+  width: 95px;
+  box-shadow: 0px 1.627705693244934px 4.0692644119262695px 0px
+    rgba(0, 0, 0, 0.25);
+}
+
 /* ===================Tablet view ================ */
 @media (min-width: 820px) and (max-width: 1180px) {
   .feature {
@@ -405,11 +415,10 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.65);
   }
 
-  .cryptoTopUp{
+  .cryptoTopUp {
     width: 562px;
     height: 500px;
     position: absolute;
     top: 5%;
   }
-  
 }
