--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -527,4 +527,9 @@ td {
   .accountRecords {
     height: 100%;
   }
+
+  .transferMoneyBtn {
+    border-radius:12px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  }
 }
