--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -41,6 +41,15 @@
   gap: 5px;
 }
 
+.successful {
+  width: 312px;
+  height: 246px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
+}
+
 /* =====================Tablet View ====================== */
 @media (min-width: 820px) and (max-width: 1180px) {
 }
