--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -13,21 +13,16 @@
 }
 
 .detailsBox {
-  display: flex;
-  flex-direction: column;
-  /* grid-template-columns: auto auto ; */
-  gap: 28px;
-}
-
-.boxes3 {
-  grid-column: 1/3;
+  display: grid;
+  /* flex-direction: column; */
+  gap: 10px;
 }
 
 .transferMoneyPop {
   position: absolute;
   top: 27%;
-  width: 90%;
-  height: 455px;
+  /* width: 90%; */
+  height: 520px;
   flex-shrink: 0;
   border-radius: 8px;
   background: #fff;
@@ -52,10 +47,22 @@
 
 /* =====================Tablet View ====================== */
 @media (min-width: 820px) and (max-width: 1180px) {
+  .detailsBox {
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+  }
+
+  .transferMoneyPop {
+    height: 650px;
+    border-radius: 12px;
+  }
 }
 
 /* ======================Surface Pro 7===================== */
 @media (min-width: 912px) and (max-width: 1368px) {
+
 }
 
 /* ==================Laptop View ============================ */
@@ -67,5 +74,17 @@
   .transferMoneyBtn {
     border-radius: 12px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .detailsBox {
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
+  }
+
+  .transferMoneyPop{
+    top: 11%;
+    height: 580px;
   }
 }
