--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -84,7 +84,13 @@
   }
 
   .transferMoneyPop{
-    top: 11%;
-    height: 580px;
+    top: 7%;
+    height: 600px;
+  }
+
+  .successful{
+    width: 50%;
+    height: 465px;
+    box-shadow: 0px 0px 16.952381610870361px 0px rgba(0, 0, 0, 0.25);
   }
 }
