--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -306,7 +306,7 @@ select {
   }
 
   .logout {
-    margin-top: 190%;
+    /* margin-top: 190%; */
     font-size: 24px;
     align-items: center;
   }
@@ -329,7 +329,7 @@ select {
   }
 
   .logout {
-    margin-top: 90%;
+    /* margin-top: 90%; */
   }
 
   .topbar {
