--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -1,76 +1,91 @@
 /* =====================Iphone SE======================= */
-@media (min-width: 375px) and (max-width: 667px) {
+@media (min-width: 375px) {
   .countryDropDown {
-    top: 45.6%;
+    top: 46.6%;
+  }
+  .transferMoneyPop {
+    position: absolute;
+    top: 18%;
   }
 }
 
 /* ========================iphone 12 pro===================== */
-@media (min-width: 390px) and (max-width: 844px) {
+@media (min-width: 360px) and (min-width: 390px) {
   .countryDropDown {
-    top: 36.6%;
+    top: 37.6%;
+  }
+  /* .transferMoneyPop {
+    position: absolute;
+    top: 27%;
+  } */
+}
+
+@media (min-width: 412px) {
+  .countryDropDown {
+    top: 35%;
   }
 }
-
 /* =======================Samsung Galaxy S8+ ======================== */
-.transferMoneyBtn {
-  border-radius: 4.763px;
-  background: #fff;
-  box-shadow: 0px 0px 3.969465970993042px 0px rgba(0, 0, 0, 0.25);
-}
+@media (min-width: 360px) and (max-width: 740px) {
+  .transferMoneyBtn {
+    border-radius: 4.763px;
+    background: #fff;
+    box-shadow: 0px 0px 3.969465970993042px 0px rgba(0, 0, 0, 0.25);
+  }
 
-.boxes {
-  border-radius: 3.328px;
-  border: 0.555px solid var(--stroke-fade, rgba(0, 0, 0, 0.3));
-  background: #fff3e5;
-  grid-column: 0;
-}
+  .boxes {
+    border-radius: 3.328px;
+    border: 0.555px solid var(--stroke-fade, rgba(0, 0, 0, 0.3));
+    background: #fff3e5;
+    grid-column: 0;
+  }
 
-.detailsBox {
-  display: grid;
-  /* flex-direction: column; */
-  gap: 10px;
-}
-
-.transferMoneyPop {
-  position: absolute;
-  top: 27%;
-  /* width: 90%; */
-  height: 520px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  background: #fff;
-  box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
-}
-
-.inputBox {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.successful {
-  width: 312px;
-  height: 246px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  background: #fff;
-  box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
-}
-
-/* =====================Tablet View ====================== */
-@media (min-width: 820px) and (max-width: 1180px) {
   .detailsBox {
     display: grid;
     /* flex-direction: column; */
-    grid-template-columns: 1fr 1fr;
-    gap: 25px;
+    gap: 10px;
   }
 
   .transferMoneyPop {
-    height: 650px;
-    border-radius: 12px;
+    position: absolute;
+    /* top: 27%; */
+    /* width: 90%; */
+    height: 520px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .inputBox {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .successful {
+    width: 312px;
+    height: 246px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  /* =====================Tablet View ====================== */
+  @media (min-width: 820px) and (max-width: 1180px) {
+    .detailsBox {
+      display: grid;
+      /* flex-direction: column; */
+      grid-template-columns: 1fr 1fr;
+      gap: 25px;
+    }
+
+    .transferMoneyPop {
+      height: 650px;
+      border-radius: 12px;
+    }
   }
 }
 
