--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -48,7 +48,7 @@
 
   .transferMoneyPop {
     position: absolute;
-    /* top: 27%; */
+    top: 27%;
     /* width: 90%; */
     height: 520px;
     flex-shrink: 0;
