--- a/src/Components/Dashboard/DashboardComponents/component.module.css
+++ b/src/Components/Dashboard/DashboardComponents/component.module.css
@@ -148,7 +148,8 @@
   border-radius: 5px;
   color: #7c7c7c;
   position: absolute;
-  left: 69%;
+  /* left: 70%; */
+  right:5;
   width: 95px;
   box-shadow: 0px 1.627705693244934px 4.0692644119262695px 0px
     rgba(0, 0, 0, 0.25);
@@ -497,8 +498,7 @@ td {
     padding: 18px 18px;
   }
 
-  .accountRecords{
+  .accountRecords {
     height: 100%;
   }
-
 }
