--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -1,4 +1,3 @@
-
 .transferMoneyBtn {
   border-radius: 4.763px;
   background: #fff;
@@ -55,8 +54,9 @@
 }
 
 .successful {
-  width: 312px;
-  height: 246px;
+  position: absolute;
+  bottom: 0%;
+  height: 470px;
   flex-shrink: 0;
   border-radius: 8px;
   background: #fff;
@@ -72,22 +72,29 @@
   }
 
   .transferMoneyPop {
-    height: 600px;
-    width: 70%;
+    height: 620px;
     border-radius: 12px;
     background: #fff;
     box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
   }
 
   .transferConfirmation {
-    width: 70%;
     position: absolute;
-    height: 515px;
+    height: 565px;
     bottom: 0%;
     flex-shrink: 0;
     border-radius: 8px;
     background: #fff;
     box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .inputPin {
+    height: 300px;
+  }
+
+  .successful {
+    width: 80%;
+    height: 590px;
   }
 
   .boxes {
@@ -123,7 +130,6 @@
 
   .transferMoneyPop {
     top: 3%;
-    width: 880px;
     height: 620px;
     border-radius: 10px;
     background: #fff;
@@ -131,20 +137,26 @@
   }
 
   .successful {
+    position: absolute;
+    bottom: 2%;
     width: 50%;
-    height: 465px;
+    height: 620px;
     box-shadow: 0px 0px 16.952381610870361px 0px rgba(0, 0, 0, 0.25);
   }
 
   .transferConfirmation {
     position: absolute;
     top: 0.8%;
-    width: 880px;
-    /* bottom: 0; */
     height: 640px;
     flex-shrink: 0;
     border-radius: 20px;
     background: #fff;
     box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .inputPin {
+    height: 465px;
+    position: absolute;
+    bottom: 10%;
   }
 }
