--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -46,6 +46,22 @@
   box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
 }
 
+.deletePopUp{
+  height: 250px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
+}
+
+.deleteSuccess{
+  height: 250px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
+}
+
 .inputBox {
   width: 100%;
   display: flex;
@@ -63,8 +79,16 @@
   box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
 }
 
+.receipt {
+  height: 100%;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
+}
+
 /* =====================Tablet View ====================== */
-@media (min-width: 820px) {
+@media (min-width: 820px) and (max-width: 1180px){
   .detailsBox {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -79,22 +103,32 @@
   }
 
   .transferConfirmation {
-    position: absolute;
-    height: 565px;
-    bottom: 0%;
+    height: 572px;
+    bottom: 25%;
     flex-shrink: 0;
-    border-radius: 8px;
+    border-radius: 11px;
     background: #fff;
     box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
   }
 
   .inputPin {
-    height: 300px;
+    bottom: 30%;
+    width: 481.25px;
+    height: 350px;
   }
 
   .successful {
+    bottom: 30%;
     width: 80%;
     height: 590px;
+  }
+
+  .deletePopUp{
+    height: 400px;
+  }
+
+  .deleteSuccess{
+    height: 400px;
   }
 
   .boxes {
@@ -139,7 +173,7 @@
   .successful {
     position: absolute;
     bottom: 2%;
-    width: 50%;
+    border-radius: 15px;
     height: 620px;
     box-shadow: 0px 0px 16.952381610870361px 0px rgba(0, 0, 0, 0.25);
   }
@@ -158,5 +192,15 @@
     height: 465px;
     position: absolute;
     bottom: 10%;
+  }
+
+  .deletePopUp{
+    border-radius: 20px;
+    height: 465px;
+  }
+
+  .deleteSuccess{
+    border-radius: 20px;
+    height: 465px;
   }
 }
