--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -82,7 +82,7 @@
 .receipt {
   height: 100%;
   flex-shrink: 0;
-  border-radius: 8px;
+  border-radius: 10px;
   background: #fff;
   box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
 }
@@ -163,9 +163,8 @@
   }
 
   .transferMoneyPop {
-    top: 3%;
-    height: 620px;
-    border-radius: 10px;
+    height: 550px;
+    border-radius: 20px;
     background: #fff;
     box-shadow: 0px 0px 7.068181991577148px 0px rgba(0, 0, 0, 0.25);
   }
@@ -180,8 +179,8 @@
 
   .transferConfirmation {
     position: absolute;
-    top: 0.8%;
-    height: 640px;
+    top: 7%;
+    height: 550px;
     flex-shrink: 0;
     border-radius: 20px;
     background: #fff;
@@ -189,9 +188,10 @@
   }
 
   .inputPin {
-    height: 465px;
+    height: 405px;
     position: absolute;
-    bottom: 10%;
+    top: 18%;
+    border-radius: 20px;
   }
 
   .deletePopUp{
@@ -202,5 +202,9 @@
   .deleteSuccess{
     border-radius: 20px;
     height: 465px;
+  }
+
+  .receipt{
+    border-radius: 20px;
   }
 }
