--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -1,3 +1,7 @@
+.successful::-webkit-scrollbar {
+  display: none;
+}
+
 .transferMoneyBtn {
   border-radius: 4.763px;
   background: #fff;
@@ -170,10 +174,11 @@
   }
 
   .successful {
+
     position: absolute;
-    bottom: 2%;
+    top: 7%;
     border-radius: 15px;
-    height: 620px;
+    height: 550px;
     box-shadow: 0px 0px 16.952381610870361px 0px rgba(0, 0, 0, 0.25);
   }
 
