--- a/src/Components/Dashboard/Layout/Dashboard.module.css
+++ b/src/Components/Dashboard/Layout/Dashboard.module.css
@@ -89,7 +89,7 @@ select {
 .button {
   display: flex;
   width: 50%;
-  padding: 4.333px 11.667px;
+  padding: 4.333px;
   justify-content: center;
   align-items: center;
   gap: 3.333px;
