--- a/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
+++ b/src/Components/Dashboard/DashboardComponents/TransferComponent/transfer.module.css
@@ -83,6 +83,16 @@
   box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
 }
 
+.failed{
+  position: absolute;
+  bottom: 0%;
+  height: 250px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 0px 5.952381610870361px 0px rgba(0, 0, 0, 0.25);
+}
+
 .receipt {
   height: 100%;
   flex-shrink: 0;
@@ -125,6 +135,12 @@
     bottom: 30%;
     width: 80%;
     height: 590px;
+  }
+
+  .failed{
+    bottom: 30%;
+    width: 80%;
+    height: 350px;
   }
 
   .deletePopUp{
@@ -174,7 +190,14 @@
   }
 
   .successful {
+    position: absolute;
+    top: 7%;
+    border-radius: 15px;
+    height: 550px;
+    box-shadow: 0px 0px 16.952381610870361px 0px rgba(0, 0, 0, 0.25);
+  }
 
+  .failed{
     position: absolute;
     top: 7%;
     border-radius: 15px;
@@ -185,7 +208,7 @@
   .transferConfirmation {
     position: absolute;
     top: 7%;
-    height: 550px;
+    height: 405px;
     flex-shrink: 0;
     border-radius: 20px;
     background: #fff;
